fixed stretched avatar file

--- a/styling/style.css
+++ b/styling/style.css
@@ -1833,8 +1833,8 @@ a.article_link:hover{
 }
 
 .avatar_final{
-  width: 100%;
-  height: 80%;
+  width: 300px;
+  height: 300px;
 }
 
 .example{
